scrollbar bug fixed:01

--- a/css/Notifications.css
+++ b/css/Notifications.css
@@ -27,7 +27,7 @@
     height: 3px;
 }
 .notifications::-webkit-scrollbar-track {
-    margin-top: 3px;
+    margin-top: 5px;
     margin-bottom: 3px;
 }
 .notifications::-webkit-scrollbar-thumb {
